Add user toggle for map interleaved rendering
